--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "source": [
     "### Loading data\n",
-    "We define a dictionary for each species containing the species `name`, path to the protein `sequences`, path to the protein `embeddings`, path to the raw `counts` and the `column` name that should be used as cell type. Here, we use a 50k subset from the Allen Brain Data, which can be downloaded from [Zonodo](link)."
+    "We define a dictionary for each species containing the species `name`, path to the protein `sequences`, path to the protein `embeddings`, path to the raw `counts` and the `column` name that should be used as cell type. Here, we use a 50k subset from the Allen Brain Data, which can be downloaded from [Zenodo](https://doi.org/10.5281/zenodo.7582460)."
    ],
    "metadata": {
     "collapsed": false
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "source": [
     "### Calculating initial gene matches\n",
-    "`calc_dist` calculates and saves the protein embedding distances using the cosine distance in a sparse format."
+    "`calc_dist` calculates and saves the protein embedding distances using the cosine distance in a sparse format. Alternatively, `calc_dist_blast` can be used to convert BLAST distances to a similar format."
    ],
    "metadata": {
     "collapsed": false
